--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6,6 +6,13 @@
   width:100vw;
   
 }
+.buttons{
+  text-align: center;
+}
+
+.login{
+  text-align: center;
+}
 
 #header{
   font-family: 'Jura', sans-serif;
@@ -17,6 +24,14 @@ text-align: center;
   
 }
 
+#tourRedirect{
+ 
+  text-align: center;
+
+}
+.tourHeader{
+  text-align: center;
+}
 
 #noFuss{
 font-family: 'Jura', sans-serif;
